--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <h1>Cats!</h1>
+    <section id="cat-breed-1" class="cat-section"></section>
+    <section id="cat-breed-2" class="cat-section"></section>
+    <section class="cat-breed-1"></section>
     <script src="js/index.js"></script>
   </body>
 </html>
